<?xml version="1.0"?>
<package format="3">
  <name>nexus_4wd_mecanum_description</name>
  <version>0.1.0</version>
  <description>The nexus_4wd_mecanum_description package</description>

  <author email="r-baran@hotmail.fr">Robin Baran</author>
  <maintainer email="r-baran@hotmail.fr">Robin Baran</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
